--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         .loader {
             color: #0091ff;
             font-size: 32px;
-            margin: 25% auto;
-            width: 1em;
+            margin-top: 32%;
             height: 1em;
             position: relative;
         }
@@ -22,7 +21,9 @@
 </head>
 <body>
     <div id="app">
-        <div class="loader">Loading...</div>
+        <div style="text-align: center;margin: 0 auto">
+            <div class="loader">Loading...</div>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
